# SNR-yolo-moos-integration

./: .gitignore  CMakeLists.txt  Homography.py  README.md  test.moos
Homography_deLaar/: Working_Homography.py
homography-moos-wrapper/: LocationCalculationApp.cpp  LocationCalculationApp.h  homography_sys.py
pYOLO/: CMakeLists.txt  YOLO.cpp  YOLO.h  YOLO_Info.cpp  pYOLO.moos
pYOLO/yolo/: detect.py  readmeornot.txt
pYOLO/yolo/.ipynb_checkpoints/: ourquickstart-checkpoint.ipynb
resources/: ImageSort.py  (+3 more)
src/: CMakeLists.txt
src/pHomography/: LocationCalculation.cpp  README.md
src/pLocationCalculation/: CMakeLists.txt  LocationCalculation.cpp  LocationCalculation_Info.cpp  README.md  main.cpp
src/pObjectDetection/: ObjectDetection.cpp  ObjectDetection.h  ObjectDetection_Info.h  Object_Detection_Info.cpp  README.md  YOLO.cpp  YOLO.h  YOLO_Info.cpp  main.cpp  pObjectDetection.moos
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry_Info.h
src/pYOLO/: README.md  YOLO.cpp  YOLO.h  YOLO_Info.h  main.cpp  pYOLO.moos
src/pYOLO/yolo/: detect.py
src/pYOLO/yolo/runs/detect/exp2/labels/: 0_0.txt
src/pYOLO/yolo/runs/detect/exp3/labels/: 0_0.txt
src/pYOLO/yolo/runs/detect/exp4/labels/: 0_0.txt  0_1.txt  0_10.txt  0_100.txt  0_1000.txt  0_1001.txt  0_1003.txt  0_1004.txt  0_1007.txt  0_1008.txt  0_1009.txt  0_1012.txt  0_1013.txt  0_1015.txt  0_1016.txt  0_1018.txt  0_1019.txt  0_102.txt  0_1021.txt  0_1022.txt  0_1023.txt  0_1025.txt  0_1026.txt  0_1028.txt  0_1029.txt  0_103.txt  0_1031.txt  0_1033.txt  0_1035.txt  0_1036.txt  0_1038.txt  0_1039.txt  0_1042.txt  0_1043.txt  0_1045.txt  0_1047.txt  0_1048.txt  0_1050.txt  0_1051.txt  0_1053.txt  (+872 more)
src/pYOLO/yolo/runs/detect/exp9/labels/: 0_0.txt  0_1.txt  0_100.txt  0_101.txt  0_104.txt  0_105.txt  0_107.txt  0_109.txt  0_11.txt  0_111.txt  0_112.txt  0_114.txt  0_115.txt  0_117.txt  0_118.txt  0_12.txt  0_121.txt  0_122.txt  0_124.txt  0_126.txt  0_127.txt  0_128.txt  0_13.txt  0_130.txt  0_132.txt  0_133.txt  0_136.txt  0_137.txt  0_138.txt  0_140.txt  0_142.txt  0_144.txt  0_145.txt  0_146.txt  0_149.txt  0_15.txt  0_150.txt  0_151.txt  0_153.txt  0_154.txt  (+164 more)
src/pYOLO/yolo/utils/: general.py
(+41 files in other folders)
